--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <html> 
 <head>
-    <title></title>
+    <title>Pandas</title>
 </head>
 <body>
  <p>
-
-    
+    The giant panda, a black-and-white bear, has a body typical of bears. It has black fur on its ears, eye patches, muzzle, legs, and shoulders. The rest of the animal's coat is whit
  </p>
-    <h1></h1>
-
-
+    
 
 </body>
 </html>
